# OS-Proyecto-2

./: .gitignore  README.md
.github/workflows/: build.yml
CEThreads/: CEthreads.c  CEthreads.h  Makefile  demo-CEthreads.c  helloWorld.c
Calendarizador/: Boat_Doubly_Linked_List.c  CMakeLists.txt  Estado seguro.c  Thread_Doubly_Linked_List.c  calendarizador.c  constants.h  main.c  types.h
GUI/: client  client.c  client2  client2.c  constants.py  gui.py  helloWorld.py  messages.txt  models.py  multithreading.c  server.py  testJson.py
arduino-serial/: CMakeLists.txt  arduino-serial-lib.c
calendarizadores/: CMakeLists.txt  FCFS.c  Priority.c  RMS.c  RR.c  SJF.c  calendarizador.c  config.json  config2.json  constants.h  input.txt  main.c  readConfigFile  readConfigFile.c  types.h
calendarizadores/algorithms/: EDF.cpp  EDF1.cpp  Priority.c  output.txt
canal/: CMakeLists.txt
common/: CMakeLists.txt  helloWorld.c  tools.c
common/include/: tools.h
hw_iface/: CMakeLists.txt  helloWorld.c  hw_iface.c  serial_comm.c  serial_ex.c  serial_example.c
hw_iface/arduino-canal-1/: arduino-canal-1.ino
hw_iface/arduino-counters/: arduino-counters.ino
hw_iface/arduino_code/: arduino_code.ino
hw_iface/include/: hw_iface.h  hw_structs.h  serial_comm.h
hw_iface/master-arduino/: master-arduino.ino
sw_iface/: CMakeLists.txt
test/: CMakeLists.txt  compile_commands.json
test/test_hw_iface/: test_channel_arduino.c  test_serial_comm.c
